--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
+    "react-material-ui-carousel": "^2.3.5",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
